Fix loading spinner style issue

--- a/src/components/styles/ImageUploader.module.scss
+++ b/src/components/styles/ImageUploader.module.scss
@@ -4,7 +4,7 @@
 	.loadingSpinnerContainer {
 		display: none;
 
-		img.loadingSpinner {
+		div.loadingSpinner {
 			background-image: svg-load('../../assets/loading-spinner-gear.svg');
 			background-size: cover;
 			height: 24px;
