--- a/src/components/styles/ImageGallery.module.scss
+++ b/src/components/styles/ImageGallery.module.scss
@@ -27,6 +27,12 @@
 			box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 		}
 	}
+
+	.folderTitle {
+		h2, div {
+			display: inline-block;
+		}
+	}
 }
 
 .hidden {
